--- a/index.html
+++ b/index.html
@@ -11,6 +11,125 @@
   <title>Document</title>
 </head>
 <body>
-  <p>hola</p>
+  <main class="main-content">
+    <section class="first-section">
+      <img src="./images/logo.svg" alt="logo">
+      <h1>A history of everything you copy</h1>
+      <p>Clipboards allows you to track and organize everything you copy. Instantly access your clipboard on all your devices</p>
+      <div class="first-section-buttons">
+        <button>Download for iOS</button>
+        <button>Download for Mac</button>
+      </div>
+    </section>
+    <!-- empty -->
+    <section class="second-section">
+      <h2>Keep track of your snippets</h2>
+      <p>Clipboards instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+      <div class="mac-image">
+        <img src="./images/image-computer.png" alt="Mac">
+      </div>
+      <div class="info-snippets">
+        <div class="paragraph1">
+          <h3>Quick Search</h3>
+          <p>Easily search your snippets by content, category, web adress, application, and more.</p>
+        </div>
+        <!-- empty -->
+        <div class="paragraph2">
+          <h3>iCloud Sync</h3>
+          <p>Instantly saves and syncs snippets across all your devices.</p>
+        </div>
+        <!-- empty -->
+        <div class="paragraph3">
+          <h3>Complete History</h3>
+          <p>Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+      </div>
+    </section>
+    <!-- empty -->
+    <section class="third-section">
+      <h2>Acces clipboard Anywhere</h2>
+      <p>Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+      <img src="./images/image-devices.png" alt="devices">
+    </section>
+    <!-- empty -->
+    <section class="fourth-section">
+      <div class="title">
+        <h2>Supercharge your workflow</h2>
+        <p>We've got the tools to boost your productivity.</p>
+      </div>
+      <!-- empty -->
+      <div class="options">
+        <div class="create">
+          <img src="./images/icon-blacklist.svg" alt="">
+          <h3>Create blacklists</h3>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <!-- empty -->
+        <div class="plain">
+          <img src="./images/icon-text.svg" alt="icon text">
+          <h3>Plain text snippets</h3>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <!-- empty -->
+        <div class="sneak">
+          <img src="./images/icon-preview.svg" alt="icon preview">
+          <h3>Sneak preview</h3>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+      <!-- empty -->
+      <div class="logos">
+        <img src="./images/logo-google.png" alt="logo google">
+        <img src="./images/logo-ibm.png" alt="">
+        <img src="./images/logo-microsoft.png" alt="">
+        <img src="./images/logo-hp.png" alt="">
+        <img src="./images/logo-vector-graphics.png" alt="">
+      </div>
+    </section>
+    <!-- empty -->
+    <section class="fifth-section">
+      <h2>Clipboard for iOS and Mac OS</h2>
+      <p>Avilable for free on the App Store. Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.</p>
+      <div class="fifth-section-buttons">
+        <button>Download for iOS</button>
+        <button>Download for Mac</button>
+      </div>
+    </section>
+  </main>
+  <!-- empty -->
+  <footer>
+  <div class="logo-footer">
+    <img src="./images/logo.svg" alt="logo">
+  </div>
+  <!-- empty -->
+  <div class="first-colummn">
+    <p>FAQs</p>
+    <p>Contact Us</p>
+  </div>
+  <!-- empty -->
+  <div class="second-colummn">
+    <p>Privacy Policy</p>
+    <p>Press Kit</p>
+  </div>
+  <!-- empty -->
+  <div class="third-colummn">
+    <p>Install Guide</p>
+  </div>
+  <!-- empty -->
+  <div class="social-networks">
+    <a href="" >
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path class="icon" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/></svg>
+    </a>
+
+    <a href="">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path class="icon" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+    </a>
+
+
+    <a href="">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path class="icon" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
+    </a>
+  </div>
+  </footer>
 </body>
 </html>
