--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <title>Clipboard</title>
 </head>
 <body>
   <main class="main-content">
@@ -53,25 +53,25 @@
     </section>
     <!-- empty -->
     <section class="fourth-section">
-      <div class="title">
+      <div class="tittle">
         <h2>Supercharge your workflow</h2>
         <p>We've got the tools to boost your productivity.</p>
       </div>
       <!-- empty -->
       <div class="options">
-        <div class="create">
+        <div class="create op">
           <img src="./images/icon-blacklist.svg" alt="">
           <h3>Create blacklists</h3>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </div>
         <!-- empty -->
-        <div class="plain">
+        <div class="plain op">
           <img src="./images/icon-text.svg" alt="icon text">
           <h3>Plain text snippets</h3>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
         <!-- empty -->
-        <div class="sneak">
+        <div class="sneak op">
           <img src="./images/icon-preview.svg" alt="icon preview">
           <h3>Sneak preview</h3>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
