Terminé los estilos de css para mobile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
   </main>
   <!-- empty -->
-  <footer>
+  <footer  class="footer">
   <div class="logo-footer">
     <img src="./images/logo.svg" alt="logo">
   </div>
