Acabamos detalles de pantalla mobile y agregué archivo para media query de desktop

--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
   </div>
   <!-- empty -->
   <div class="first-colummn">
-    <p>FAQs</p>
-    <p>Contact Us</p>
+    <p> <a href="">FAQs</a></p>
+    <p> <a href="">Contact Us</a></p>
   </div>
   <!-- empty -->
   <div class="second-colummn">
-    <p>Privacy Policy</p>
-    <p>Press Kit</p>
+    <p> <a href="">Privacy Policy</a></p>
+    <p> <a href="">Press Kit</a></p>
   </div>
   <!-- empty -->
   <div class="third-colummn">
-    <p>Install Guide</p>
+    <p> <a href="">Install Guide</a></p>
   </div>
   <!-- empty -->
   <div class="social-networks">
