Agregué un div para poder hacer los estilos de desktop e apliqué margin-bottom para tener espacio entre secciones

--- a/index.html
+++ b/index.html
@@ -26,23 +26,25 @@
     <section class="second-section">
       <h2>Keep track of your snippets</h2>
       <p>Clipboards instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
-      <div class="mac-image">
-        <img src="./images/image-computer.png" alt="Mac">
-      </div>
-      <div class="info-snippets">
-        <div class="paragraph1">
-          <h3>Quick Search</h3>
-          <p>Easily search your snippets by content, category, web adress, application, and more.</p>
+      <div class="second-section-about">
+        <div class="mac-image">
+          <img src="./images/image-computer.png" alt="Mac">
         </div>
-        <!-- empty -->
-        <div class="paragraph2">
-          <h3>iCloud Sync</h3>
-          <p>Instantly saves and syncs snippets across all your devices.</p>
-        </div>
-        <!-- empty -->
-        <div class="paragraph3">
-          <h3>Complete History</h3>
-          <p>Retrieve any snippets from the first moment you started using the app.</p>
+        <div class="info-snippets">
+          <div class="paragraph1">
+            <h3>Quick Search</h3>
+            <p>Easily search your snippets by content, category, web adress, application, and more.</p>
+          </div>
+          <!-- empty -->
+          <div class="paragraph2">
+            <h3>iCloud Sync</h3>
+            <p>Instantly saves and syncs snippets across all your devices.</p>
+          </div>
+          <!-- empty -->
+          <div class="paragraph3">
+            <h3>Complete History</h3>
+            <p>Retrieve any snippets from the first moment you started using the app.</p>
+          </div>
         </div>
       </div>
     </section>
