Estilos de pantalla mobile terminada

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
           <img src="./images/image-computer.png" alt="Mac">
         </div>
         <div class="info-snippets">
-          <div class="paragraph1">
+          <div class="paragraph1 paragraph">
             <h3>Quick Search</h3>
             <p>Easily search your snippets by content, category, web adress, application, and more.</p>
           </div>
           <!-- empty -->
-          <div class="paragraph2">
+          <div class="paragraph2 paragraph">
             <h3>iCloud Sync</h3>
             <p>Instantly saves and syncs snippets across all your devices.</p>
           </div>
           <!-- empty -->
-          <div class="paragraph3">
+          <div class="paragraph3 paragraph">
             <h3>Complete History</h3>
             <p>Retrieve any snippets from the first moment you started using the app.</p>
           </div>
@@ -116,7 +116,7 @@
   </div>
   <!-- empty -->
   <div class="third-colummn">
-    <p> <a href="">Install Guide</a></p>
+    <p><a href="">Install Guide</a></p>
   </div>
   <!-- empty -->
   <div class="social-networks">
